# CPPGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: default.frag  default.vert
Engine/Include/Core/: Assert.h  Base.h  Common.h  Core.h  Logger.h
Engine/Include/ECS/: Component.h  ComponentStorage.h  ECSWrapper.h  EntityRegister.h  TickedSystem.h
Engine/Include/ECS/Components/: Movement.h  Transform.h
Engine/Include/ECS/Systems/: GraphicsTicks.h  MovementTicks.h
Engine/Include/Game/: Game.h
Engine/Include/Graphics/: Camera.h  DebugLineRenderer.h  EBO.h  GLFWContext.h  Mesh.h  MeshID.h  Renderer.h  Shader.h  Texture.h  TextureID.h  VAO.h  VBO.h  Window.h
Engine/Include/Input/: ActionBindings.h  ActionMap.h  InputHandler.h
Engine/Include/Physics/: QuadTree.h  Vector2double.h  Vector2float.h  Vector3.h  Vector3double.h  Vector3float.h
Engine/Include/Test/: EntityStressTest.h
Engine/Include/TickedSystems/: CounterTickedSystem.h  GraphicsTicks.h
Engine/Include/Utilities/: CommandBuffer.h  GameClock.h  Job.h  JobController.h  QuadTree.h  Scheduler.h  ThreadPool.h
Engine/Source/Core/: Base.cpp  Logger.cpp
Engine/Source/ECS/: ECSWrapper.cpp  EntityRegister.cpp
Engine/Source/ECS/Systems/: GraphicsTicks.cpp  MovementTicks.cpp
Engine/Source/Game/: Game.cpp
Engine/Source/Graphics/: Camera.cpp  DebugLineRenderer.cpp  EBO.cpp  GLFWContext.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  ShaderClass.cpp  Texture.cpp  VAO.cpp  VBO.cpp  VertexBuffer.cpp  Window.cpp  default.vert
Engine/Source/Graphics/Shaders/: default.frag
Engine/Source/Input/: InputHandler.cpp
Engine/Source/Physics/: QuadTree.cpp  Vector3.cpp  Vector3double.cpp  Vector3float.cpp
Engine/Source/Test/: EntityStressTest.cpp
Engine/Source/TickedSystems/: GraphicsTicks.cpp
Engine/Source/Utilities/: GameClock.cpp  JobController.cpp  QuadTree.cpp  Scheduler.cpp  ThreadPool.cpp
Game/: CMakeLists.txt  main.cpp
Game/Assets/Shaders/: debugline.frag  debugline.vert  default.frag  default.vert
Game/Include/: ECSWrapper.h  Game.h  GameDescs.h  GameECS.h
Game/Include/Components/: ComponentPools.h  DamagePayload.h  Health.h  Lifetime.h  Movement.h  Physics.h  Position.h  Renderable.h  Thruster.h  Weapon.h
Game/Include/Graphics/: Mesh.h  MeshID.h  MeshRegistry.h  TextureID.h  TextureRegistry.h
Game/Include/Systems/: CameraController.h  CollisionSystem.h  DamageSystem.h  GraphicsTicks.h  LifetimeSystem.h  MovementTicks.h  QuadtreeDebugSystem.h  RenderSystem.h  ThrusterSystem.h
Game/Include/Test/: CollisionTest.h  CoreSystemsTest.h  DamageTest.h  EntityStressTest.h  RenderGridTest.h  ThreadingStressTest.h  ThrusterTest.h
Game/Source/: ECSWrapper.cpp  Game.cpp
Game/Source/Graphics/: Mesh.cpp  MeshRegistry.cpp  TextureRegistry.cpp
Game/Source/Systems/: CameraController.cpp  CollisionSystem.cpp  DamageSystem.cpp  GraphicsTicks.cpp  LifetimeSystem.cpp  MovementTicks.cpp  QuadtreeDebugSystem.cpp  RenderSystem.cpp  ThrusterSystem.cpp
Game/Source/Test/: CollisionTest.cpp  CoreSystemsTest.cpp  DamageTest.cpp  EntityStressTest.cpp  RenderGridTest.cpp  ThreadingStressTest.cpp  ThrusterTest.cpp
Game/Tests/: CMakeLists.txt  test_ecswrapper.cpp  test_movementticks.cpp  test_performance.cpp
src/: main.cpp
